// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders list section with custom title style 1`] = `
<View
  style={
    [
      {
        "marginVertical": 8,
      },
      undefined,
    ]
  }
  theme={
    {
      "animation": {
        "scale": 1,
      },
      "colors": {
        "backdrop": "rgba(50, 47, 55, 0.4)",
        "background": "rgba(255, 251, 254, 1)",
        "elevation": {
          "level0": "transparent",
          "level1": "rgb(247, 243, 249)",
          "level2": "rgb(243, 237, 246)",
          "level3": "rgb(238, 232, 244)",
          "level4": "rgb(236, 230, 243)",
          "level5": "rgb(233, 227, 241)",
        },
        "error": "rgba(179, 38, 30, 1)",
        "errorContainer": "rgba(249, 222, 220, 1)",
        "inverseOnSurface": "rgba(244, 239, 244, 1)",
        "inversePrimary": "rgba(208, 188, 255, 1)",
        "inverseSurface": "rgba(49, 48, 51, 1)",
        "onBackground": "rgba(28, 27, 31, 1)",
        "onError": "rgba(255, 255, 255, 1)",
        "onErrorContainer": "rgba(65, 14, 11, 1)",
        "onPrimary": "rgba(255, 255, 255, 1)",
        "onPrimaryContainer": "rgba(33, 0, 93, 1)",
        "onSecondary": "rgba(255, 255, 255, 1)",
        "onSecondaryContainer": "rgba(29, 25, 43, 1)",
        "onSurface": "rgba(28, 27, 31, 1)",
        "onSurfaceDisabled": "rgba(28, 27, 31, 0.38)",
        "onSurfaceVariant": "rgba(73, 69, 79, 1)",
        "onTertiary": "rgba(255, 255, 255, 1)",
        "onTertiaryContainer": "rgba(49, 17, 29, 1)",
        "outline": "rgba(121, 116, 126, 1)",
        "outlineVariant": "rgba(202, 196, 208, 1)",
        "primary": "rgba(103, 80, 164, 1)",
        "primaryContainer": "rgba(234, 221, 255, 1)",
        "scrim": "rgba(0, 0, 0, 1)",
        "secondary": "rgba(98, 91, 113, 1)",
        "secondaryContainer": "rgba(232, 222, 248, 1)",
        "shadow": "rgba(0, 0, 0, 1)",
        "surface": "rgba(255, 251, 254, 1)",
        "surfaceDisabled": "rgba(28, 27, 31, 0.12)",
        "surfaceVariant": "rgba(231, 224, 236, 1)",
        "tertiary": "rgba(125, 82, 96, 1)",
        "tertiaryContainer": "rgba(255, 216, 228, 1)",
      },
      "dark": false,
      "fonts": {
        "bodyLarge": {
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": 0.15,
          "lineHeight": 24,
        },
        "bodyMedium": {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.25,
          "lineHeight": 20,
        },
        "bodySmall": {
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0.4,
          "lineHeight": 16,
        },
        "default": {
          "fontFamily": "System",
          "fontWeight": "400",
          "letterSpacing": 0,
        },
        "displayLarge": {
          "fontFamily": "System",
          "fontSize": 57,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 64,
        },
        "displayMedium": {
          "fontFamily": "System",
          "fontSize": 45,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 52,
        },
        "displaySmall": {
          "fontFamily": "System",
          "fontSize": 36,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 44,
        },
        "headlineLarge": {
          "fontFamily": "System",
          "fontSize": 32,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 40,
        },
        "headlineMedium": {
          "fontFamily": "System",
          "fontSize": 28,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 36,
        },
        "headlineSmall": {
          "fontFamily": "System",
          "fontSize": 24,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 32,
        },
        "labelLarge": {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0.1,
          "lineHeight": 20,
        },
        "labelMedium": {
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "500",
          "letterSpacing": 0.5,
          "lineHeight": 16,
        },
        "labelSmall": {
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "500",
          "letterSpacing": 0.5,
          "lineHeight": 16,
        },
        "titleLarge": {
          "fontFamily": "System",
          "fontSize": 22,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 28,
        },
        "titleMedium": {
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "500",
          "letterSpacing": 0.15,
          "lineHeight": 24,
        },
        "titleSmall": {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0.1,
          "lineHeight": 20,
        },
      },
      "isV3": true,
      "roundness": 4,
      "version": 3,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        [
          {
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0.25,
            "lineHeight": 20,
          },
          [
            {
              "paddingHorizontal": 16,
              "paddingVertical": 13,
            },
            {
              "color": "rgba(73, 69, 79, 1)",
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0.25,
              "lineHeight": 20,
            },
            {
              "color": "#f44336",
            },
          ],
        ],
      ]
    }
  >
    Some title
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        false,
        [
          {
            "paddingRight": 24,
            "paddingVertical": 8,
          },
          undefined,
        ],
      ]
    }
    testID="list-item"
  >
    <View
      style={
        {
          "flexDirection": "row",
          "marginVertical": 6,
          "width": "100%",
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "alignSelf": "center",
              "marginLeft": 16,
              "marginRight": 0,
              "marginVertical": 0,
            },
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(73, 69, 79, 1)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
              {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰉋
        </Text>
      </View>
      <View
        style={
          [
            {
              "paddingLeft": 16,
            },
            {
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
            },
            undefined,
          ]
        }
        testID="list-item-content"
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "System",
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              {
                "writingDirection": "ltr",
              },
              [
                {
                  "fontSize": 16,
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                },
                undefined,
              ],
            ]
          }
        >
          First Item
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        false,
        [
          {
            "paddingRight": 24,
            "paddingVertical": 8,
          },
          undefined,
        ],
      ]
    }
    testID="list-item"
  >
    <View
      style={
        {
          "flexDirection": "row",
          "marginVertical": 6,
          "width": "100%",
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "alignSelf": "center",
              "marginLeft": 16,
              "marginRight": 0,
              "marginVertical": 0,
            },
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(73, 69, 79, 1)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
              {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰉋
        </Text>
      </View>
      <View
        style={
          [
            {
              "paddingLeft": 16,
            },
            {
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
            },
            undefined,
          ]
        }
        testID="list-item-content"
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "System",
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              {
                "writingDirection": "ltr",
              },
              [
                {
                  "fontSize": 16,
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                },
                undefined,
              ],
            ]
          }
        >
          Second Item
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders list section with subheader 1`] = `
<View
  style={
    [
      {
        "marginVertical": 8,
      },
      undefined,
    ]
  }
  theme={
    {
      "animation": {
        "scale": 1,
      },
      "colors": {
        "backdrop": "rgba(50, 47, 55, 0.4)",
        "background": "rgba(255, 251, 254, 1)",
        "elevation": {
          "level0": "transparent",
          "level1": "rgb(247, 243, 249)",
          "level2": "rgb(243, 237, 246)",
          "level3": "rgb(238, 232, 244)",
          "level4": "rgb(236, 230, 243)",
          "level5": "rgb(233, 227, 241)",
        },
        "error": "rgba(179, 38, 30, 1)",
        "errorContainer": "rgba(249, 222, 220, 1)",
        "inverseOnSurface": "rgba(244, 239, 244, 1)",
        "inversePrimary": "rgba(208, 188, 255, 1)",
        "inverseSurface": "rgba(49, 48, 51, 1)",
        "onBackground": "rgba(28, 27, 31, 1)",
        "onError": "rgba(255, 255, 255, 1)",
        "onErrorContainer": "rgba(65, 14, 11, 1)",
        "onPrimary": "rgba(255, 255, 255, 1)",
        "onPrimaryContainer": "rgba(33, 0, 93, 1)",
        "onSecondary": "rgba(255, 255, 255, 1)",
        "onSecondaryContainer": "rgba(29, 25, 43, 1)",
        "onSurface": "rgba(28, 27, 31, 1)",
        "onSurfaceDisabled": "rgba(28, 27, 31, 0.38)",
        "onSurfaceVariant": "rgba(73, 69, 79, 1)",
        "onTertiary": "rgba(255, 255, 255, 1)",
        "onTertiaryContainer": "rgba(49, 17, 29, 1)",
        "outline": "rgba(121, 116, 126, 1)",
        "outlineVariant": "rgba(202, 196, 208, 1)",
        "primary": "rgba(103, 80, 164, 1)",
        "primaryContainer": "rgba(234, 221, 255, 1)",
        "scrim": "rgba(0, 0, 0, 1)",
        "secondary": "rgba(98, 91, 113, 1)",
        "secondaryContainer": "rgba(232, 222, 248, 1)",
        "shadow": "rgba(0, 0, 0, 1)",
        "surface": "rgba(255, 251, 254, 1)",
        "surfaceDisabled": "rgba(28, 27, 31, 0.12)",
        "surfaceVariant": "rgba(231, 224, 236, 1)",
        "tertiary": "rgba(125, 82, 96, 1)",
        "tertiaryContainer": "rgba(255, 216, 228, 1)",
      },
      "dark": false,
      "fonts": {
        "bodyLarge": {
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": 0.15,
          "lineHeight": 24,
        },
        "bodyMedium": {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.25,
          "lineHeight": 20,
        },
        "bodySmall": {
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0.4,
          "lineHeight": 16,
        },
        "default": {
          "fontFamily": "System",
          "fontWeight": "400",
          "letterSpacing": 0,
        },
        "displayLarge": {
          "fontFamily": "System",
          "fontSize": 57,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 64,
        },
        "displayMedium": {
          "fontFamily": "System",
          "fontSize": 45,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 52,
        },
        "displaySmall": {
          "fontFamily": "System",
          "fontSize": 36,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 44,
        },
        "headlineLarge": {
          "fontFamily": "System",
          "fontSize": 32,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 40,
        },
        "headlineMedium": {
          "fontFamily": "System",
          "fontSize": 28,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 36,
        },
        "headlineSmall": {
          "fontFamily": "System",
          "fontSize": 24,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 32,
        },
        "labelLarge": {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0.1,
          "lineHeight": 20,
        },
        "labelMedium": {
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "500",
          "letterSpacing": 0.5,
          "lineHeight": 16,
        },
        "labelSmall": {
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "500",
          "letterSpacing": 0.5,
          "lineHeight": 16,
        },
        "titleLarge": {
          "fontFamily": "System",
          "fontSize": 22,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 28,
        },
        "titleMedium": {
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "500",
          "letterSpacing": 0.15,
          "lineHeight": 24,
        },
        "titleSmall": {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0.1,
          "lineHeight": 20,
        },
      },
      "isV3": true,
      "roundness": 4,
      "version": 3,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      [
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        [
          {
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0.25,
            "lineHeight": 20,
          },
          [
            {
              "paddingHorizontal": 16,
              "paddingVertical": 13,
            },
            {
              "color": "rgba(73, 69, 79, 1)",
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0.25,
              "lineHeight": 20,
            },
            undefined,
          ],
        ],
      ]
    }
  >
    Some title
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        false,
        [
          {
            "paddingRight": 24,
            "paddingVertical": 8,
          },
          undefined,
        ],
      ]
    }
    testID="list-item"
  >
    <View
      style={
        {
          "flexDirection": "row",
          "marginVertical": 6,
          "width": "100%",
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "alignSelf": "center",
              "marginLeft": 16,
              "marginRight": 0,
              "marginVertical": 0,
            },
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(73, 69, 79, 1)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
              {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰉋
        </Text>
      </View>
      <View
        style={
          [
            {
              "paddingLeft": 16,
            },
            {
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
            },
            undefined,
          ]
        }
        testID="list-item-content"
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "System",
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              {
                "writingDirection": "ltr",
              },
              [
                {
                  "fontSize": 16,
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                },
                undefined,
              ],
            ]
          }
        >
          First Item
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        false,
        [
          {
            "paddingRight": 24,
            "paddingVertical": 8,
          },
          undefined,
        ],
      ]
    }
    testID="list-item"
  >
    <View
      style={
        {
          "flexDirection": "row",
          "marginVertical": 6,
          "width": "100%",
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "alignSelf": "center",
              "marginLeft": 16,
              "marginRight": 0,
              "marginVertical": 0,
            },
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(73, 69, 79, 1)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
              {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰉋
        </Text>
      </View>
      <View
        style={
          [
            {
              "paddingLeft": 16,
            },
            {
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
            },
            undefined,
          ]
        }
        testID="list-item-content"
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "System",
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              {
                "writingDirection": "ltr",
              },
              [
                {
                  "fontSize": 16,
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                },
                undefined,
              ],
            ]
          }
        >
          Second Item
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders list section without subheader 1`] = `
<View
  style={
    [
      {
        "marginVertical": 8,
      },
      undefined,
    ]
  }
  theme={
    {
      "animation": {
        "scale": 1,
      },
      "colors": {
        "backdrop": "rgba(50, 47, 55, 0.4)",
        "background": "rgba(255, 251, 254, 1)",
        "elevation": {
          "level0": "transparent",
          "level1": "rgb(247, 243, 249)",
          "level2": "rgb(243, 237, 246)",
          "level3": "rgb(238, 232, 244)",
          "level4": "rgb(236, 230, 243)",
          "level5": "rgb(233, 227, 241)",
        },
        "error": "rgba(179, 38, 30, 1)",
        "errorContainer": "rgba(249, 222, 220, 1)",
        "inverseOnSurface": "rgba(244, 239, 244, 1)",
        "inversePrimary": "rgba(208, 188, 255, 1)",
        "inverseSurface": "rgba(49, 48, 51, 1)",
        "onBackground": "rgba(28, 27, 31, 1)",
        "onError": "rgba(255, 255, 255, 1)",
        "onErrorContainer": "rgba(65, 14, 11, 1)",
        "onPrimary": "rgba(255, 255, 255, 1)",
        "onPrimaryContainer": "rgba(33, 0, 93, 1)",
        "onSecondary": "rgba(255, 255, 255, 1)",
        "onSecondaryContainer": "rgba(29, 25, 43, 1)",
        "onSurface": "rgba(28, 27, 31, 1)",
        "onSurfaceDisabled": "rgba(28, 27, 31, 0.38)",
        "onSurfaceVariant": "rgba(73, 69, 79, 1)",
        "onTertiary": "rgba(255, 255, 255, 1)",
        "onTertiaryContainer": "rgba(49, 17, 29, 1)",
        "outline": "rgba(121, 116, 126, 1)",
        "outlineVariant": "rgba(202, 196, 208, 1)",
        "primary": "rgba(103, 80, 164, 1)",
        "primaryContainer": "rgba(234, 221, 255, 1)",
        "scrim": "rgba(0, 0, 0, 1)",
        "secondary": "rgba(98, 91, 113, 1)",
        "secondaryContainer": "rgba(232, 222, 248, 1)",
        "shadow": "rgba(0, 0, 0, 1)",
        "surface": "rgba(255, 251, 254, 1)",
        "surfaceDisabled": "rgba(28, 27, 31, 0.12)",
        "surfaceVariant": "rgba(231, 224, 236, 1)",
        "tertiary": "rgba(125, 82, 96, 1)",
        "tertiaryContainer": "rgba(255, 216, 228, 1)",
      },
      "dark": false,
      "fonts": {
        "bodyLarge": {
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": 0.15,
          "lineHeight": 24,
        },
        "bodyMedium": {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.25,
          "lineHeight": 20,
        },
        "bodySmall": {
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0.4,
          "lineHeight": 16,
        },
        "default": {
          "fontFamily": "System",
          "fontWeight": "400",
          "letterSpacing": 0,
        },
        "displayLarge": {
          "fontFamily": "System",
          "fontSize": 57,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 64,
        },
        "displayMedium": {
          "fontFamily": "System",
          "fontSize": 45,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 52,
        },
        "displaySmall": {
          "fontFamily": "System",
          "fontSize": 36,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 44,
        },
        "headlineLarge": {
          "fontFamily": "System",
          "fontSize": 32,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 40,
        },
        "headlineMedium": {
          "fontFamily": "System",
          "fontSize": 28,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 36,
        },
        "headlineSmall": {
          "fontFamily": "System",
          "fontSize": 24,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 32,
        },
        "labelLarge": {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0.1,
          "lineHeight": 20,
        },
        "labelMedium": {
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "500",
          "letterSpacing": 0.5,
          "lineHeight": 16,
        },
        "labelSmall": {
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "500",
          "letterSpacing": 0.5,
          "lineHeight": 16,
        },
        "titleLarge": {
          "fontFamily": "System",
          "fontSize": 22,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 28,
        },
        "titleMedium": {
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "500",
          "letterSpacing": 0.15,
          "lineHeight": 24,
        },
        "titleSmall": {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0.1,
          "lineHeight": 20,
        },
      },
      "isV3": true,
      "roundness": 4,
      "version": 3,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        false,
        [
          {
            "paddingRight": 24,
            "paddingVertical": 8,
          },
          undefined,
        ],
      ]
    }
    testID="list-item"
  >
    <View
      style={
        {
          "flexDirection": "row",
          "marginVertical": 6,
          "width": "100%",
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "alignSelf": "center",
              "marginLeft": 16,
              "marginRight": 0,
              "marginVertical": 0,
            },
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(73, 69, 79, 1)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
              {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰉋
        </Text>
      </View>
      <View
        style={
          [
            {
              "paddingLeft": 16,
            },
            {
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
            },
            undefined,
          ]
        }
        testID="list-item-content"
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "System",
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              {
                "writingDirection": "ltr",
              },
              [
                {
                  "fontSize": 16,
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                },
                undefined,
              ],
            ]
          }
        >
          First Item
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        false,
        [
          {
            "paddingRight": 24,
            "paddingVertical": 8,
          },
          undefined,
        ],
      ]
    }
    testID="list-item"
  >
    <View
      style={
        {
          "flexDirection": "row",
          "marginVertical": 6,
          "width": "100%",
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "alignSelf": "center",
              "marginLeft": 16,
              "marginRight": 0,
              "marginVertical": 0,
            },
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(73, 69, 79, 1)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
              {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          󰉋
        </Text>
      </View>
      <View
        style={
          [
            {
              "paddingLeft": 16,
            },
            {
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
            },
            undefined,
          ]
        }
        testID="list-item-content"
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "System",
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              {
                "writingDirection": "ltr",
              },
              [
                {
                  "fontSize": 16,
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                },
                undefined,
              ],
            ]
          }
        >
          Second Item
        </Text>
      </View>
    </View>
  </View>
</View>
`;
